# genkit

./: Cargo.toml  README.md
.github/workflows/: build.yaml  fmt.yaml
examples/: note.rs
src/: build.rs  context.rs  data.rs  engine.rs  helpers.rs  html.rs  jinja.rs  lib.rs  serve.rs
src/cmd/: build.rs  lint.rs  mod.rs  serve.rs
src/code_blocks/: callout.rs  mod.rs  quote.rs  url_preview.rs
src/entity/: mod.rs
src/markdown/: mod.rs  render.rs  visitor.rs
sublime/: README.md
templates/: quote.jinja
