[package]
name = "genkit"
version = "0.1.2"
description = "A common generator kit for static site generator."
authors = ["Folyd"]
homepage = "https://github.com/zineland/genkit"
repository = "https://github.com/zineland/genkit"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
# Enable vendored openssl to help building in cross-rs environment.
# See https://github.com/cross-rs/cross/pull/322
openssl-vendored = ["hyper-tls/vendored"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4" }
dashmap = { version = "5.4", features = ["serde"] }
dyn-clone = "1.0"
futures = { version = "0.3", default-features = false }
html5ever = "0.26"
hyper = { version = "0.14", features = ["client", "server", "tcp", "http1"] }
hyper-tls = "0.5"
hyper-tungstenite = "0.9"

markup5ever_rcdom = "0.2"
minijinja = { version = "0.32", features = ["source"] }
notify-debouncer-mini = { version = "0.2", default-features = false }
once_cell = "1"
opener = "0.6"
parking_lot = "0.12"
promptly = "0.3"
pulldown-cmark = "0.9"
rayon = "1.6"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1.26", features = ["rt-multi-thread", "signal", "macros"] }
toml = "0.7"
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.4", features = ["fs"] }
walkdir = "2"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
test-case = "3"
