[package]
name = "genkit"
version = "0.3.1"
description = "A common generator kit for static site generator."
authors = ["Folyd"]
homepage = "https://github.com/zineland/genkit"
repository = "https://github.com/zineland/genkit"
documentation = "https://docs.rs/genkit"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
# Enable vendored openssl to help building in cross-rs environment.
# See https://github.com/cross-rs/cross/pull/322
openssl-vendored = ["hyper-tls/vendored"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.7.2"
clap = { version = "4" }
dashmap = { version = "6.1", features = ["serde"] }
dyn-clone = "1.0"
fastwebsockets = { version = "0.8", features = ["upgrade"] }
futures = { version = "0.3", default-features = false }
html5ever = "0.27"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.4", features = ["client", "server", "http1"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1.8", features = [
    "service",
    "client",
    "client-legacy",
    "http1",
] }
markup5ever_rcdom = "0.3"
minijinja = { version = "2.3" }
notify-debouncer-mini = { version = "0.4", default-features = false }
once_cell = "1"
opener = "0.7"
parking_lot = "0.12"
promptly = "0.3"
pulldown-cmark = "0.12"
rayon = "1.6"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1.26", features = ["rt-multi-thread", "signal", "macros"] }
toml = "0.8"
tower = { version = "0.5", features = ["make", "util"] }
tower-http = { version = "0.5", features = ["fs"] }
walkdir = "2"
words-count = "0.1"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
test-case = "3"
